# rocq-hollight-fole

./: CONFIG  Makefile  README.md  coq-hol-light-Logic1.opam  main.opam  make_opam.v  make_terms.v  make_upto_fole.ml  make_upto_unif.ml  mappings.lp  mappings.v  mappings_coq_hol_light.v  opam  reproduce  terms.v  theorems.v
.github/workflows/: main.yml
