opam-version: "2.0"
synopsis: "HOL-Light's logic library up to unify"
description: """
This library contains an automatic translation in Coq of the HOL-Light
Logic library using https://github.com/Deducteam/hol2dk.
"""
homepage: "https://github.com/agontard/coq-hol-light-Logic1"
dev-repo: "git+https://github.com/agontard/coq-hol-light-Logic1.git"
bug-reports: "https://github.com/agontard/coq-hol-light-Logic1/issues"
doc: "https://github.com/agontard/coq-hol-light-Logic1"
authors: ["Antoine GONTARD"]
license: "None"
depends: [
  "coq" {>= "8.19"}
  "coq-hol-light-real-with-N" {>= "1.2.0"}
  "coq-fourcolor-reals" {>= "1.4.0"}
]
build: [make "-j%{jobs}%"]
install: [make "install"]
tags: [
  "logpath:HOLLight_Logic"
  "date:2025-05-16"
  "keyword:HOL-Light"
]
