opam-version: "2.0"
synopsis: "HOL-Light's logic library up to unify"
description: """
This library contains an automatic translation in Rocq of the HOL-Light
Logic library using https://github.com/Deducteam/hol2dk.
"""
homepage: "https://github.com/agontard/coq-hol-light-Logic1"
dev-repo: "git+https://github.com/agontard/coq-hol-light-Logic1.git"
bug-reports: "https://github.com/agontard/coq-hol-light-Logic1/issues"
doc: "https://github.com/agontard/coq-hol-light-Logic1"
maintainer: "antoine.gontard@free.fr"
authors: ["Antoine GONTARD"]
license: "None"
depends: [
  "rocq-prover" {>= "9.0"}
  "coq-mathcomp-classical" {>= "1.8.0"}
  "coq-hol-light-real-with-N" {>= "2.0.0"}
  "coq-fourcolor-reals" {>= "1.4.0"}
]
build: [make "-j%{jobs}%"]
install: [make "install"]
tags: [
  "logpath:HOLLight_Logic"
  "date:2025-05-16"
  "keyword:HOL-Light"
  "keyword:first order logic"
]
